Added student and project record pages and links

--- a/templates/project_info.html
+++ b/templates/project_info.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        <h4><a href="/">Home</a> <a href="/all_students">List of all Students</a>
         <h1>{{title}}</h1>
         <ul>
             {%for row in grade %}
