--- a/templates/get_github.html
+++ b/templates/get_github.html
@@ -1,8 +1,18 @@
 <html>
-    <body>
+    <body style="background-color:aqua">
+        <h4><a href="/all_students">List of All Students</a></h4>
         <form action="/student">
         <label for="github">Enter github id</label>
         <input type="text" name="github" />
+        <input type="submit">
+        </form>
+        <form action="/new_student">
+        <label for="first">Enter new student's first name</label>
+        <input type="text" name="first"/><br> <!-- defining key for the dictionary -->
+        <label for="last">Enter new student's last name</label>
+        <input type="text" name="last"/><br>
+        <label for="new_github">Enter new student's github id</label>
+        <input type="text" name="new_github"/><br>
         <input type="submit">
         </form> 
     </body>
